# datamind-ai

./: .dockerignore  .env.example  .gitignore  LINKEDIN.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  agent.py  tools.py
backend/: Dockerfile  config.py  database.py  main.py  models.py  requirements.txt
backend/routers/: chat.py  config.py  data.py  ml.py  tools.py
backend/schemas/: responses.py
backend/services/: session.py
frontend/: Dockerfile  env.d.ts  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts
frontend/src/components/: AppHeader.vue  AutoEda.vue  ChatView.vue  DataPreview.vue  MlSuggestion.vue  PlotlyChart.vue  Sidebar.vue  ToastContainer.vue  WelcomeMessage.vue
frontend/src/composables/: useToast.ts
frontend/src/router/: index.ts
frontend/src/stores/: chat.ts  config.ts  data.ts
frontend/src/types/: index.ts
frontend/src/views/: HomeView.vue  NotFoundView.vue
models/: README.txt
prompts/: __init__.py  system_prompt.py
scripts/: dev.bat  download-model.py
tests/: conftest.py  test_agent_live.py  test_agent_live2.py  test_autoeda_live.py  test_debug_live.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
tests/fixtures/: sample_heart.csv
utils/: __init__.py  charts.py  data_loader.py  ml_advisor.py  preprocessing.py
